# SeaFoxAdventures

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  HeaderizeFiles.py  License.txt  Readme.md  headerize_files.py
assets/sprites/: player.pxo  tiles.pxo
include/: Coordinate.hpp  DebugWindow.hpp  Player.hpp  Renderer.hpp  TileData.hpp  TileRange.hpp  TileType.hpp  WorldCollision.hpp  WorldGenerator.hpp  tile_data.hpp  tile_type.hpp  world.hpp
src/: DebugWindow.cpp  Player.cpp  Renderer.cpp  TileData.cpp  WorldCollision.cpp  WorldGenerator.cpp  main.cpp  world.cpp
